--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
               </div>
             </nav>
         </header>
-        <main></main>
+        <main>
+          <h1>hello</h1>
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
